project/src/main/webapp/css_files/pcenter/pcenter_common.css
body{
		margin:0 auto;
		border:0;	
		padding:0;
		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
	
h5{
	margin:0;
}

table a{
	cursor: pointer;
}


/*navigator style start*/
#nav-list a{
	cursor: pointer;
}
/*navigator style end*/

.pcheader{
  padding-bottom: 0px;
  margin: 10px 0 10px;
  border-bottom: 1px solid #eeeeee;
}

.margin5{
	margin:5px 0 5px 0;
}

.font16{
	font-size:16px;	
}

.padding58{
		padding:5px 8px 5px 8px;
}

.blank{
	padding:20px;
}

.thumbnails > li {
  float: left;
  margin-bottom: 10px;
  margin-left: 20px;
}

.thumbnail .caption {
  padding: 0px;
  color: #555555;
	text-align:center;
}

.btn-small{
	cursor:pointer;
}

#submit{
	margin-left:25%;
}

#cancel{
	margin-left:10%;
}

/* 修改基本信息 start */
#female, #secret{
	margin-left:30px;
}
/* 修改基本信息 end */

/* 管理企业信息show_enterprise.jsp start */
#thumb{
	margin-left:20%;
}

#bottom_button_div
{
}
/* 管理企业信息show_enterprise.jsp end */

